@@ -1,3 +1,7 @@
+2020-11-19 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x/x_console.c: Add todo documentations templates.
+
 2020-11-18 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/*/*.c: Replace u_log_message macro with geda_log:
